<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.quizdascapitais.HomeFragment"
        android:label="@string/comeco"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_homeFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameFragment"
        android:name="com.example.quizdascapitais.GameFragment"
        android:label="@string/jogo"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_gameFragment_to_gameWonFragment"
            app:destination="@id/gameWonFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_gameFragment_to_gameOverFragment"
            app:destination="@id/gameOverFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/gameWonFragment"
        android:name="com.example.quizdascapitais.GameWonFragment"
        android:label="@string/resultado"
        tools:layout="@layout/fragment_game_won">
        <action
            android:id="@+id/action_gameWonFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameOverFragment"
        android:name="com.example.quizdascapitais.GameOverFragment"
        android:label="@string/resultado"
        tools:layout="@layout/fragment_game_over" >
        <action
            android:id="@+id/action_gameOverFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.quizdascapitais.AboutFragment"
        android:label="@string/sobre"
        tools:layout="@layout/fragment_about" />
</navigation>