<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/questionImage"
            android:layout_width="0dp"
            android:layout_height="@dimen/image_header_height"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/banner_quiz"
            android:contentDescription="@string/banner" />

        <Button
            android:id="@+id/button5"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:text="@string/sobre"
            android:textSize="22sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button"
            />

        <Button
            android:id="@+id/button"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="90dp"
            android:text="@string/jogar"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@+id/questionImage"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>